@@ -1,5 +1,8 @@
 package org.example;
 
+import java.math.BigDecimal;
+import java.math.BigInteger;
+import java.math.RoundingMode;
 import java.util.List;
 
 public class Statistic {
@@ -7,16 +10,58 @@ public class Statistic {
         return "количество элементов: " + stringList.size();
     }
     static String getIntegerFullStat(List<String> integers) {
+        BigInteger minInt = new BigInteger(integers.getFirst());
+        BigInteger maxInt = new BigInteger(integers.getFirst());
+        BigInteger sum = BigInteger.ZERO;
 
+        for (String str : integers) {
+            BigInteger num = new BigInteger(str);
+            if (num.compareTo(minInt) < 0) {
+                minInt = num;
+            }
+            if (num.compareTo(maxInt) > 0) {
+                maxInt = num;
+            }
+            sum = sum.add(num);
+        }
+
+        BigDecimal avgVal = new BigDecimal(sum)
+                .divide(new BigDecimal(integers.size()), 10, RoundingMode.HALF_UP);
+
+        return getSortStat(integers) + "\n" +
+                "минимум: " + minInt + "\n" +
+                "максимум: " + maxInt + "\n" +
+                "сумма: " + sum + "\n" +
+                "среднее: " + avgVal;
     }
 
     static String getFloatFullStat(List<String> floats) {
+        double minFloat = Double.parseDouble(floats.getFirst());
+        double maxFloat = Double.parseDouble(floats.getFirst());
+        double sum = 0;
+        double avgVal;
 
+        for (String str : floats) {
+            double num = Double.parseDouble(str);
+            if (num < minFloat) {
+                minFloat = num;
+            }
+            if (num > maxFloat) {
+                maxFloat = num;
+            }
+            sum += num;
+        }
+        avgVal = sum / floats.size();
+        return getSortStat(floats) + "\n" +
+                "минимум: " + minFloat + "\n" +
+                "максимум: " + maxFloat + "\n" +
+                "сумма: " + sum + "\n" +
+                "среднее: " + avgVal;
     }
 
     static String getStringFullStat(List<String> strings) {
-        String minStr = strings.get(0);
-        String maxStr = strings.get(0);
+        String minStr = strings.getFirst();
+        String maxStr = strings.getFirst();
         for (String str: strings) {
             if (str.length() < minStr.length()) {
                 minStr = str;
@@ -25,10 +70,8 @@ public class Statistic {
                 maxStr = str;
             }
         }
-        StringBuilder result = new StringBuilder();
-        result.append(getSortStat(strings)).append("\n");
-        result.append("размер самой короткой строки: ").append(minStr.length());
-        result.append("размер самой длинной строки: ").append(maxStr.length());
-        return result.toString();
+        return getSortStat(strings) + "\n" +
+                "размер самой короткой строки: " + minStr.length() + "\n" +
+                "размер самой длинной строки: " + maxStr.length();
     }
 }
